# my-machines

./: .travis.yml  Cargo.toml  appveyor.yml
ci/: before_deploy.sh
src/: cli.rs  machine_status.rs  main.rs  models.rs  system.rs  watch.rs
