[package]
name = "butsku-cli"
version = "0.1.0"
authors = ["Matias Klemola <matias.klemola@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = { version="0.37.0", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.37.0", default_features=false, features=["rustls"] }
clap = "2.31.2"
hostname = "0.1.5"
