[package]
authors = ["Matias Klemola <matias.klemola@gmail.com>"]
edition = "2018"
name = "my-machines"
version = "0.3.0"

[dependencies]
chrono = "0.4.15"
clap = "2.33.3"
dynomite = "0.5.1"
hostname = "0.1.5"
itertools = "0.9.0"
job_scheduler = "1.2.1"
mac_address = "1.0.3"
prettytable-rs = "0.8.0"
rusoto_core = "0.40.0"
systemstat = "0.1.5"
time = "0.2.16"
uuid = "0.8.1"

[[bin]]
name = "myma"
path = "src/main.rs"
